--- a/JDQA/JDQA/JDQA.csproj
+++ b/JDQA/JDQA/JDQA.csproj
@@ -67,6 +67,9 @@
     <Compile Include="ProcessShortForm.xaml.cs">
       <DependentUpon>ProcessShortForm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ProcessShortForm_2.xaml.cs">
+      <DependentUpon>ProcessShortForm_2.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Results.xaml.cs">
       <DependentUpon>Results.xaml</DependentUpon>
     </Compile>
@@ -114,6 +117,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ProcessShortForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ProcessShortForm_2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
