--- a/JDQA/JDQA/JDQA.csproj
+++ b/JDQA/JDQA/JDQA.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Classes\ConvertedScoreClasses.cs" />
     <Compile Include="Classes\DistributionClasses.cs" />
     <Compile Include="Classes\phase1Generator.cs" />
+    <Compile Include="Classes\Phase1Selections.cs" />
     <Compile Include="phase_1.xaml.cs">
       <DependentUpon>phase_1.xaml</DependentUpon>
     </Compile>
