--- a/JDQA/JDQA/JDQA.csproj
+++ b/JDQA/JDQA/JDQA.csproj
@@ -60,8 +60,11 @@
     </ApplicationDefinition>
     <Compile Include="Classes\ConvertedScoreClasses.cs" />
     <Compile Include="Classes\DistributionClasses.cs" />
+    <Compile Include="Classes\PatternShapeFunctions.cs" />
     <Compile Include="Classes\phase1Generator.cs" />
     <Compile Include="Classes\Phase1Selections.cs" />
+    <Compile Include="Classes\QuestionShapeValue.cs" />
+    <Compile Include="Classes\QuestionShapeValues.cs" />
     <Compile Include="phase_1.xaml.cs">
       <DependentUpon>phase_1.xaml</DependentUpon>
     </Compile>
